--- a/src/global.css
+++ b/src/global.css
@@ -1,13 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Italiana', serif;
+  margin: 0;
 }
 
 h1 {
   font-size: 3rem;
 }
 
-p {
+p, a {
   font-size: 1.5rem;
 }
