--- a/src/components/common/Nav.module.css
+++ b/src/components/common/Nav.module.css
@@ -1,3 +1,10 @@
+.nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .navLink {
   display: inline-block;
   margin-right: 1rem;
