Added some body styling, nav needs work for flex to ensure logo is centre

--- a/src/components/common/Layout.module.css
+++ b/src/components/common/Layout.module.css
@@ -1,5 +1,6 @@
 .bodyContainer {
-  margin: 3rem auto;
-  max-width: 650px;
+  margin: 20px auto;
+  max-width: 800px;
   padding: 0 1rem;
+  text-align: center;
 }
