--- a/src/components/common/Nav.module.css
+++ b/src/components/common/Nav.module.css
@@ -3,8 +3,13 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  padding: 10px 0;
 }
 
 .navLink {
   margin: 0 1rem;
+  width: 130px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
