Added a shadow and defined a secondary bg colour

--- a/src/global.css
+++ b/src/global.css
@@ -2,6 +2,7 @@
 
 :root {
   --main-bg-color: #f9f6f6;
+  --secondary-bg-color: #495057;
   --main-font-color: #495057;
   --secondary-font-color: #ee6c4d;
 }
