--- a/src/components/common/Nav.module.css
+++ b/src/components/common/Nav.module.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   padding: 10px 0;
+  box-shadow: 0 4px 3px -3px var(--secondary-bg-color);
 }
 
 .navLink {
