--- a/src/components/common/Nav.module.css
+++ b/src/components/common/Nav.module.css
@@ -1,10 +1,18 @@
 .nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: 10px 0;
   box-shadow: 0 4px 3px -3px var(--secondary-bg-color);
+  background-color: #f9f6f6;
+  /* CURRENTLY THE BELOW ENDS UP TRANSPARENT, POSSIBLE GATSBY ISSUE? */
+  /* background-color: var(--primary-bg-color); */
+  z-index: 1;
 }
 
 .navLink {
