--- a/src/components/common/Nav.module.css
+++ b/src/components/common/Nav.module.css
@@ -2,6 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  height: 180px;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -13,6 +14,11 @@
   /* CURRENTLY THE BELOW ENDS UP TRANSPARENT, POSSIBLE GATSBY ISSUE? */
   /* background-color: var(--primary-bg-color); */
   z-index: 1;
+  transition: height 0.2s linear;
+}
+
+.navCollapse {
+  height: 70px;
 }
 
 .navLink {
@@ -21,4 +27,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.navLogo {
+  transition: transform 0.4s;
+  transform: scale(1);
+}
+
+.navCollapse .navLogo {
+  transition: transform 0.4s;
+  transform: scale(0.4);
 }
