Conditionally render elements based on whether they exist in CRM, added flex styling for a basic layout of image to left of text

--- a/src/components/common/Section.module.css
+++ b/src/components/common/Section.module.css
@@ -1,3 +1,14 @@
 .sectionImage {
-  max-width: 300px;
+  max-width: 400px;
+}
+
+.section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.subSection {
+  padding: 10px;
 }
