--- a/src/components/common/Section.module.css
+++ b/src/components/common/Section.module.css
@@ -1,14 +1,20 @@
 .sectionImage {
-  max-width: 400px;
-}
-
-.section {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  max-width: 100%;
 }
 
 .subSection {
   padding: 10px;
+}
+
+@media(min-width: 800px) {
+  .section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .sectionImage {
+    max-width: 500px;
+  }
 }
