--- a/src/components/common/Section.module.css
+++ b/src/components/common/Section.module.css
@@ -1,5 +1,9 @@
 .sectionImage {
   max-width: 100%;
+  max-height: 400px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .subSection {
@@ -15,6 +19,6 @@
   }
 
   .sectionImage {
-    max-width: 500px;
+    max-width: 450px;
   }
 }
