--- a/src/global.css
+++ b/src/global.css
@@ -58,3 +58,17 @@ button:active {
 button:focus {
   outline: 0;
 }
+
+img {
+  max-width: 100%;
+  max-height: 400px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media(min-width: 800px) {
+  img {
+    max-width: 450px;
+  }
+}
