--- a/src/components/menu/Menu.module.css
+++ b/src/components/menu/Menu.module.css
@@ -4,10 +4,10 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .menuItem {
-  padding: 20px;
-  max-width: 300px;
-  /* flex: 1 0 31%; */
+  margin: 10px;
+  max-width: 250px;
 }
