Added media query to reduce margin for smaller devices

--- a/src/components/common/Layout.module.css
+++ b/src/components/common/Layout.module.css
@@ -3,3 +3,9 @@
   max-width: 1000px;
   padding: 0 1rem;
 }
+
+@media(max-width: 800px) {
+  .bodyContainer {
+    margin: 50px auto 200px auto;
+  }
+}
