--- a/src/components/common/Nav.module.css
+++ b/src/components/common/Nav.module.css
@@ -2,23 +2,27 @@
   position: fixed;
   top: 0;
   left: 0;
-  height: 180px;
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 10px 0;
   box-shadow: 0 4px 3px -3px var(--secondary-bg-color);
   background-color: #f9f6f6;
   /* CURRENTLY THE BELOW ENDS UP TRANSPARENT, POSSIBLE GATSBY ISSUE? */
   /* background-color: var(--primary-bg-color); */
   z-index: 1;
-  transition: height 0.2s linear;
+  height: 180px;
+  transition: height 0.3s linear;
+}
+
+.navLinksAll {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0;
 }
 
 .navCollapse {
   height: 70px;
+  transition: height 0.3s linear;
 }
 
 .navLink {
@@ -35,14 +39,18 @@
 }
 
 .navLogo {
-  transition: transform 0.4s;
+  transition: transform 0.3s;
   transform: scale(1);
   margin: 0 30px;
   display: inline-block;
 }
 
+.navCollapse .navMobileLogo {
+  display: none;
+}
+
 .navCollapse .navLogo {
-  transition: transform 0.4s;
+  transition: transform 0.3s;
   transform: scale(0.4);
 }
 
@@ -51,12 +59,28 @@
     display: none;
   }
 
-  .nav {
-    height: 70px;
+  .navMobileLogo {
+    display: inline-block;
   }
 
   .navLink {
     margin: 0 5px;
     width: auto;
+  }
+
+  .nav {
+    height: 220px;
+    transition: height 0.3s linear;
+  }
+
+  .navCollapse {
+    height: 70px;
+    transition: height 0.3s linear;
+  }
+}
+
+@media(min-width: 800px) {
+  .navMobileLogo {
+    display: none;
   }
 }
