--- a/src/components/common/Nav.module.css
+++ b/src/components/common/Nav.module.css
@@ -60,7 +60,10 @@
   }
 
   .navMobileLogo {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
   }
 
   .navLink {
