--- a/src/components/blog/BlogCard.module.css
+++ b/src/components/blog/BlogCard.module.css
@@ -2,9 +2,10 @@
   margin: 10px auto;
   border: solid 1px;
   background-color: white;
-  max-width: 500px;
+  max-width: 600px;
   text-align: center;
-  padding: 10px;
+  padding: 10px 20px;
+  position: relative;
 }
 
 .headerText {
@@ -12,4 +13,18 @@
   flex-direction: row;
   justify-content: center;
   align-items: baseline;
+}
+
+.blogLink {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  text-decoration: none;
+  border-radius: 50%;
+  border: solid 2px;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
